Grid floor disappears for orthographic camera with large Clip End value #70193

Closed
opened 2019-09-23 23:23:27 +02:00 by Casey Connor · 6 comments

System Information
Operating system: Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-22 20:38, hash: 52bdf522af

Short description of error
Camera views don't show grid floor when far clipping value is high and camera is orthographic

Exact steps for others to reproduce the error

  • open blender with a blank config directory
  • ctrl-alt-numpad-0 to move camera to viewport view
  • select camera in outliner, go to camera tab in properties pane
  • change camera to orthographic view
  • observe that grid floor is visible and "Clip End" is 100m
  • increase Clip End via mouse drag
  • observe that grid floor gradually disappears as Clip End is increased; it's ~invisible at ~600m

A similar thing happens when the camera is in perspective mode: camera is at Z=17.987m, and when the Clip End is between 20 and 30m visible darkening of the grid floor is visible: I assume that's intentional for a 'soft clip' of the grid floor, but it seems to be broken in the orthographic case.

**System Information** Operating system: Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-22 20:38, hash: `52bdf522af` **Short description of error** Camera views don't show grid floor when far clipping value is high and camera is orthographic **Exact steps for others to reproduce the error** * open blender with a blank config directory * ctrl-alt-numpad-0 to move camera to viewport view * select camera in outliner, go to camera tab in properties pane * change camera to orthographic view * observe that grid floor is visible and "Clip End" is 100m * increase Clip End via mouse drag * observe that grid floor gradually disappears as Clip End is increased; it's ~invisible at ~600m A similar thing happens when the camera is in perspective mode: camera is at Z=17.987m, and when the Clip End is between 20 and 30m visible darkening of the grid floor is visible: I assume that's intentional for a 'soft clip' of the grid floor, but it seems to be broken in the orthographic case.
Author

Added subscriber: @clepsydrae

Added subscriber: @clepsydrae

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Germano Cavalcante self-assigned this 2019-09-27 15:12:04 +02:00

This is a result of the grid fade (the smooth transition between clip near and clip far).
We can change the algorithm (for example by increasing the clip near fade intensity), but that doesn't have much priority.

This is a result of the grid fade (the smooth transition between clip near and clip far). We can change the algorithm (for example by increasing the clip near fade intensity), but that doesn't have much priority.
Germano Cavalcante was unassigned by Dalai Felinto 2019-12-23 13:49:33 +01:00

Added subscriber: @ckerr

Added subscriber: @ckerr

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-25 17:19:47 +02:00

This issue was referenced by 230b9eac69

This issue was referenced by 230b9eac69c4ba42f8a6934e4032d09ba10b5715
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70193
No description provided.