Fix T70193 Overlay: Grid floor disappears for orthographic camera

The fix is to disable the fading for in the +Z direction in this case.